--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    //css產出設定
+    "liveSassCompile.settings.formats": [
+        {
+            "format": "expanded", //壓縮成一行"compressed", //壓縮成一行css，正式版本
+            "extensionName": ".css",
+            "savePath": "/style" //此為輸出的路徑，可以自行更改
+        }
+    ]
 }
